# app/controllers/api/v1/users_controller.rb
@@ -1,0 +1,16 @@
+class Api::V1::UsersController < ApplicationController
+  def sign_up
+    @user = User.new(user_params)
+  
+    if @user.save
+      render status: :created
+    else
+      render json: @user.errors, status: :unprocessable_entity
+    end
+  end
+
+  private
+  def user_params
+    params.permit(:username, :email, :password)
+  end
+end
